Issue #19636: Fix posix__getvolumepathname(), raise an OverflowError if the length doesn't fit in an DWORD